--- a/bower.json
+++ b/bower.json
@@ -47,6 +47,7 @@
     "angular-translate-handler-log": "^2.18.1",
     "angular-translate-loader-static-files": "^2.18.1",
     "angular-ui-router": "^1.0.20",
-    "normalize-css": "^8.0.1"
+    "normalize-css": "^8.0.1",
+    "angular-moment": "^1.3.0"
   }
 }
