--- a/bower.json
+++ b/bower.json
@@ -48,6 +48,7 @@
     "angular-translate-loader-static-files": "^2.18.1",
     "angular-ui-router": "^1.0.20",
     "normalize-css": "^8.0.1",
-    "angular-moment": "^1.3.0"
+    "angular-moment": "^1.3.0",
+    "angular-md5": "^0.1.10"
   }
 }
